@@ -11,6 +11,7 @@ git-annex (5.20141220) UNRELEASED; urgency=medium
   * Windows: Fix local rsync filepath munging (fixes 26 test suite failures).
   * Windows: Got the rsync special remote working.
   * Windows: Fix handling of views of filenames containing '%'
+  * OSX: Switched away from deprecated statfs64 interface.
 
  -- Joey Hess <id@joeyh.name>  Mon, 22 Dec 2014 15:16:38 -0400
 
